# genai-types

./: Cargo.toml
src/: errors.rs  lib.rs  messages.rs  models.rs  tool_choice.rs
