[package]
name = "genai-types"
version = "0.4.0"
edition = "2024"
description = "Common types for generative AI models like OpenAI, Anthropic, Google, etc."
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinrozzi/genai-types"

[dependencies]
mcp-protocol = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
